#-*- mode: org -*-

* Version 1.2.6    <2019-02-01 Sun>
  - Cumulative incidence regression cifreg function
    - Fine-Gray model with cloglog link of (1-F_1(t,x))
    - Logit link 
  - Prototype of wildbootstrap for Cox regression with 
    - confidence bands for baseline
    - with confidenence bands cumulative incidence for two cox's 

* Version 1.2.5    <2018-11-18 Sun>
  - Updated predict function for phreg 
    - with plotting functionality 
    - with robust standard errors 
  - New vignettes started 
    - phreg robust se's for marginal Cox model
    - twostage survival  model 
    - multivariate competing risks 
    - recurrent events 
  - logitSurv for fitting semiparametric proportional odds model 
    - gof 
    - robust standard errors for clustered case 
  - twostageMLE for fast twostage fitting for clustered survival data
    with robust standard errors. 
  - standard errors for twostage models now also with uncertainty from Cox 
    baseline
  - cumulative score process test gof now also for marginal Cox models 

* Version 1.2.4    <2018-05-18 Wed>
  - functions km (Kaplan-Meier) and cif (cumulative incidence
    probability) with robust standard errors.
  - computation of probability of exceeding "k" events for recurrents
    processs
  - computation of probability of exceeding "k1" and "k2" events for
    bivariate recurrents processseses
  - dspline simple spline decomposition on a data frame
  - rmvn, dmvn: RNG and density for multivariate normal distribution
    with varying correlation coefficients.

* Version 1.2.3.1 <2018-04-18 Wed>
  - starting values updated for twinlm method

* Version 1.2.3    <2018-02-02 Mon>
  - twinlm now supports ordinal outcomes
  - optimized strata calculations in phreg  
  - optimized robust standard errors in phreg  
  - weights and offsets in phreg 
  - weights argument added to lifetable
  - gof of phreg with fast cumulative residuals (Lin, Wei, Ying) 
  - graphical gof of phreg 