@@ -298,6 +298,7 @@ export(revcumsumstratasum)
 export(rmvn)
 export(robust.basehaz.phreg)
 export(robust.phreg)
+export(rpch)
 export(rr.cif)
 export(scoreMVN)
 export(showfitsim)
